Rework build scripts
* Make Dockerfiles more generic so they can be reused for all openHAB versions
* Determine version information automatically based on openhab-distro tags/branches
* Merge helper scripts into helper-functions
* Add "build" script to simplify building multiple versions or a specific distro using BuildKit
* Add GitHub Actions workflow for PR builds

Signed-off-by: Wouter Born <github@maindrain.net>

--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -1,23 +1,15 @@
-# openhab image
-#
-# ------------------------------------------------------------------------------
-#               NOTE: THIS DOCKERFILE IS GENERATED VIA "update.sh"
-#
-#                       PLEASE DO NOT EDIT IT DIRECTLY.
-# ------------------------------------------------------------------------------
-#
 FROM debian:10.7-slim
 
-# Set version variables
-ENV \
-    JAVA_VERSION="8" \
-    OPENHAB_VERSION="2.5.12-snapshot"
+ARG BUILD_DATE
+ARG VCS_REF
+ARG JAVA_VERSION
+ARG OPENHAB_VERSION
 
-# Set other variables
 ENV \
     CRYPTO_POLICY="limited" \
     EXTRA_JAVA_OPTS="" \
     GROUP_ID="9001" \
+    JAVA_VERSION="$JAVA_VERSION" \
     KARAF_EXEC="exec" \
     LC_ALL="en_US.UTF-8" \
     LANG="en_US.UTF-8" \
@@ -29,12 +21,8 @@ ENV \
     OPENHAB_HTTPS_PORT="8443" \
     OPENHAB_LOGDIR="/openhab/userdata/logs" \
     OPENHAB_USERDATA="/openhab/userdata" \
+    OPENHAB_VERSION="$OPENHAB_VERSION" \
     USER_ID="9001"
-
-# Set arguments on build
-ARG BUILD_DATE
-ARG VCS_REF
-ARG VERSION
 
 # Basic build-time metadata as defined at http://label-schema.org
 LABEL org.label-schema.build-date=$BUILD_DATE \
@@ -42,7 +30,7 @@ LABEL org.label-schema.build-date=$BUILD_DATE \
     org.label-schema.license="EPL-2.0" \
     org.label-schema.name="openHAB" \
     org.label-schema.vendor="openHAB Foundation e.V." \
-    org.label-schema.version=$VERSION \
+    org.label-schema.version=$OPENHAB_VERSION \
     org.label-schema.description="An open source, technology agnostic home automation platform" \
     org.label-schema.url="https://www.openhab.com/" \
     org.label-schema.vcs-ref=$VCS_REF \
@@ -97,7 +85,12 @@ RUN mkdir -p "${JAVA_HOME}" && \
 
 # Install openHAB
 # Set permissions for openHAB. Export TERM variable. See issue #30 for details!
-RUN wget -nv -O /tmp/openhab.zip "https://ci.openhab.org/job/openHAB-Distribution/lastSuccessfulBuild/artifact/distributions/openhab/target/openhab-2.5.12-SNAPSHOT.zip" && \
+RUN version="$(echo $OPENHAB_VERSION | sed 's/snapshot/SNAPSHOT/g')" && \
+    if [ $(echo $version | grep -E '^.+\.(M|RC).+$') ]; then url="https://openhab.jfrog.io/openhab/libs-milestone-local/org/openhab/distro/openhab/${version}/openhab-${version}.zip"; \
+    elif [ $(echo $version | grep -E '^2\..+-SNAPSHOT$') ]; then url="https://ci.openhab.org/job/openHAB-Distribution/lastSuccessfulBuild/artifact/distributions/openhab/target/openhab-${version}.zip"; \
+    elif [ $(echo $version | grep -E '^3\..+-SNAPSHOT$') ]; then url="https://ci.openhab.org/job/openHAB3-Distribution/lastSuccessfulBuild/artifact/distributions/openhab/target/openhab-${version}.zip"; \
+    else url="https://bintray.com/openhab/mvn/download_file?file_path=org%2Fopenhab%2Fdistro%2Fopenhab%2F${version}%2Fopenhab-${version}.zip"; fi && \
+    wget -nv -O /tmp/openhab.zip "$url" && \
     unzip -q /tmp/openhab.zip -d "${OPENHAB_HOME}" -x "*.bat" "*.ps1" "*.psm1" && \
     rm /tmp/openhab.zip && \
     if [ ! -f "${OPENHAB_HOME}/runtime/bin/update.lst" ]; then touch "${OPENHAB_HOME}/runtime/bin/update.lst"; fi && \
@@ -107,7 +100,7 @@ RUN wget -nv -O /tmp/openhab.zip "https://ci.openhab.org/job/openHAB-Distributio
     mkdir -p "${OPENHAB_HOME}/dist" && \
     cp -a "${OPENHAB_CONF}" "${OPENHAB_USERDATA}" "${OPENHAB_HOME}/dist" && \
     echo 'export TERM=${TERM:=dumb}' | tee -a ~/.bashrc
-COPY update.sh ${OPENHAB_HOME}/runtime/bin/update
+COPY update ${OPENHAB_HOME}/runtime/bin/update
 RUN chmod +x ${OPENHAB_HOME}/runtime/bin/update
 
 # Expose volume with configuration and userdata dir
@@ -118,9 +111,9 @@ EXPOSE 8080 8443 8101 5007
 
 # Set working directory and entrypoint
 WORKDIR ${OPENHAB_HOME}
-COPY entrypoint.sh /
-RUN chmod +x /entrypoint.sh
-ENTRYPOINT ["/entrypoint.sh"]
+COPY entrypoint /entrypoint
+RUN chmod +x /entrypoint
+ENTRYPOINT ["/entrypoint"]
 
 # Execute command
 CMD ["gosu", "openhab", "tini", "-s", "./start.sh"]
