--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -1,23 +1,15 @@
-# openhab image
-#
-# ------------------------------------------------------------------------------
-#               NOTE: THIS DOCKERFILE IS GENERATED VIA "update.sh"
-#
-#                       PLEASE DO NOT EDIT IT DIRECTLY.
-# ------------------------------------------------------------------------------
-#
-FROM debian:10.7-slim
+FROM alpine:3.12.2
 
-# Set version variables
-ENV \
-    JAVA_VERSION="11" \
-    OPENHAB_VERSION="3.1.0-snapshot"
+ARG BUILD_DATE
+ARG VCS_REF
+ARG JAVA_VERSION
+ARG OPENHAB_VERSION
 
-# Set other variables
 ENV \
     CRYPTO_POLICY="limited" \
     EXTRA_JAVA_OPTS="" \
     GROUP_ID="9001" \
+    JAVA_VERSION="$JAVA_VERSION" \
     KARAF_EXEC="exec" \
     LC_ALL="en_US.UTF-8" \
     LANG="en_US.UTF-8" \
@@ -29,12 +21,8 @@ ENV \
     OPENHAB_HTTPS_PORT="8443" \
     OPENHAB_LOGDIR="/openhab/userdata/logs" \
     OPENHAB_USERDATA="/openhab/userdata" \
+    OPENHAB_VERSION="$OPENHAB_VERSION" \
     USER_ID="9001"
-
-# Set arguments on build
-ARG BUILD_DATE
-ARG VCS_REF
-ARG VERSION
 
 # Basic build-time metadata as defined at http://label-schema.org
 LABEL org.label-schema.build-date=$BUILD_DATE \
@@ -42,7 +30,7 @@ LABEL org.label-schema.build-date=$BUILD_DATE \
     org.label-schema.license="EPL-2.0" \
     org.label-schema.name="openHAB" \
     org.label-schema.vendor="openHAB Foundation e.V." \
-    org.label-schema.version=$VERSION \
+    org.label-schema.version=$OPENHAB_VERSION \
     org.label-schema.description="An open source, technology agnostic home automation platform" \
     org.label-schema.url="https://www.openhab.com/" \
     org.label-schema.vcs-ref=$VCS_REF \
@@ -51,53 +39,42 @@ LABEL org.label-schema.build-date=$BUILD_DATE \
     maintainer="openHAB <info@openhabfoundation.org>"
 
 # Install basepackages
-RUN apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
+RUN apk update --no-cache && \
+    apk add --no-cache \
         arping \
+        bash \
         ca-certificates \
         curl \
         fontconfig \
-        gosu \
-        libcap2-bin \
-        locales \
-        locales-all \
-        netbase \
-        procps \
+        libcap \
+        nss \
+        shadow \
+        su-exec \
         tini \
+        ttf-dejavu \
+        openjdk${JAVA_VERSION} \
         unzip \
         wget \
         zip && \
     chmod u+s /usr/sbin/arping && \
-    ln -s -f /bin/true /usr/bin/chfn && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    rm -rf /var/cache/apk/*
 
-# Install java
-ENV JAVA_HOME='/usr/lib/jvm/default-jvm'
 # Limit JDK crypto policy by default to comply with local laws which may prohibit use of unlimited strength cryptography
-RUN mkdir -p "${JAVA_HOME}" && \
-    zulu8_amd64_url='https://cdn.azul.com/zulu/bin/zulu8.50.0.51-ca-jdk8.0.275-linux_x64.tar.gz' && \
-    zulu8_armhf_url='https://cdn.azul.com/zulu-embedded/bin/zulu8.50.51.263-ca-jdk8.0.275-linux_aarch32hf.tar.gz' && \
-    zulu8_arm64_url='https://cdn.azul.com/zulu-embedded/bin/zulu8.50.51.263-ca-jdk8.0.275-linux_aarch64.tar.gz' && \
-    zulu11_amd64_url='https://cdn.azul.com/zulu/bin/zulu11.43.21-ca-jdk11.0.9-linux_x64.tar.gz' && \
-    zulu11_armhf_url='https://cdn.azul.com/zulu-embedded/bin/zulu11.43.88-ca-jdk11.0.9-linux_aarch32hf.tar.gz' && \
-    zulu11_arm64_url='https://cdn.azul.com/zulu-embedded/bin/zulu11.43.88-ca-jdk11.0.9-linux_aarch64.tar.gz' && \
-    url_var="zulu${JAVA_VERSION}_$(dpkg --print-architecture)_url" && \
-    eval "java_url=\$$url_var" && \
-    wget -nv -O /tmp/java.tar.gz "${java_url}" && \
-    tar --exclude='demo' --exclude='sample' --exclude='src.zip' -xf /tmp/java.tar.gz --strip-components=1 -C "${JAVA_HOME}" && \
-    if [ "${JAVA_VERSION}" = "8" ]; then \
-        sed -i 's/^#crypto.policy=unlimited/crypto.policy=limited/' "${JAVA_HOME}/jre/lib/security/java.security"; \
+ENV JAVA_HOME='/usr/lib/jvm/default-jvm'
+RUN if [ "${JAVA_VERSION}" = "8" ]; then \
+        sed -i 's/^crypto.policy=unlimited/crypto.policy=limited/' "${JAVA_HOME}/jre/lib/security/java.security"; \
     elif [ "${JAVA_VERSION}" = "11" ]; then \
         sed -i 's/^crypto.policy=unlimited/crypto.policy=limited/' "${JAVA_HOME}/conf/security/java.security"; \
-    fi && \
-    rm /tmp/java.tar.gz && \
-    update-alternatives --install /usr/bin/java java "${JAVA_HOME}/bin/java" 50 && \
-    update-alternatives --install /usr/bin/javac javac "${JAVA_HOME}/bin/javac" 50
+    fi
 
 # Install openHAB
 # Set permissions for openHAB. Export TERM variable. See issue #30 for details!
-RUN wget -nv -O /tmp/openhab.zip "https://ci.openhab.org/job/openHAB3-Distribution/lastSuccessfulBuild/artifact/distributions/openhab/target/openhab-3.1.0-SNAPSHOT.zip" && \
+RUN version="$(echo $OPENHAB_VERSION | sed 's/snapshot/SNAPSHOT/g')" && \
+    if [ $(echo $version | grep -E '^.+\.(M|RC).+$') ]; then url="https://openhab.jfrog.io/openhab/libs-milestone-local/org/openhab/distro/openhab/${version}/openhab-${version}.zip"; \
+    elif [ $(echo $version | grep -E '^2\..+-SNAPSHOT$') ]; then url="https://ci.openhab.org/job/openHAB-Distribution/lastSuccessfulBuild/artifact/distributions/openhab/target/openhab-${version}.zip"; \
+    elif [ $(echo $version | grep -E '^3\..+-SNAPSHOT$') ]; then url="https://ci.openhab.org/job/openHAB3-Distribution/lastSuccessfulBuild/artifact/distributions/openhab/target/openhab-${version}.zip"; \
+    else url="https://bintray.com/openhab/mvn/download_file?file_path=org%2Fopenhab%2Fdistro%2Fopenhab%2F${version}%2Fopenhab-${version}.zip"; fi && \
+    wget -nv -O /tmp/openhab.zip "$url" && \
     unzip -q /tmp/openhab.zip -d "${OPENHAB_HOME}" -x "*.bat" "*.ps1" "*.psm1" && \
     rm /tmp/openhab.zip && \
     if [ ! -f "${OPENHAB_HOME}/runtime/bin/update.lst" ]; then touch "${OPENHAB_HOME}/runtime/bin/update.lst"; fi && \
@@ -107,7 +84,7 @@ RUN wget -nv -O /tmp/openhab.zip "https://ci.openhab.org/job/openHAB3-Distributi
     mkdir -p "${OPENHAB_HOME}/dist" && \
     cp -a "${OPENHAB_CONF}" "${OPENHAB_USERDATA}" "${OPENHAB_HOME}/dist" && \
     echo 'export TERM=${TERM:=dumb}' | tee -a ~/.bashrc
-COPY update.sh ${OPENHAB_HOME}/runtime/bin/update
+COPY update ${OPENHAB_HOME}/runtime/bin/update
 RUN chmod +x ${OPENHAB_HOME}/runtime/bin/update
 
 # Expose volume with configuration and userdata dir
@@ -118,9 +95,9 @@ EXPOSE 8080 8443 8101 5007
 
 # Set working directory and entrypoint
 WORKDIR ${OPENHAB_HOME}
-COPY entrypoint.sh /
-RUN chmod +x /entrypoint.sh
-ENTRYPOINT ["/entrypoint.sh"]
+COPY entrypoint /entrypoint
+RUN chmod +x /entrypoint
+ENTRYPOINT ["/entrypoint"]
 
 # Execute command
-CMD ["gosu", "openhab", "tini", "-s", "./start.sh"]
+CMD ["su-exec", "openhab", "tini", "-s", "./start.sh"]
