Allow running as non-root user
Signed-off-by: Wouter Born <github@maindrain.net>

--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -89,6 +89,14 @@ RUN apt-get update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
+# Create user and groups
+COPY create-groups /tmp/create-groups
+RUN chmod +x /tmp/create-groups && \
+    groupadd -g $GROUP_ID openhab && \
+    adduser -u $USER_ID --disabled-password --comment '' --home "${OPENHAB_HOME}" --ingroup openhab openhab && \
+    /tmp/create-groups && \
+    rm /tmp/create-groups
+
 # Limit JDK crypto policy by default to comply with local laws which may prohibit use of unlimited strength cryptography
 RUN JAVA_HOME=$(find /usr/lib/jvm -mindepth 1 -maxdepth 1 -type d) && \
     sed -i 's/^crypto.policy=unlimited/crypto.policy=limited/' "${JAVA_HOME}/conf/security/java.security"
